work on basic sections, navbar and header

--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,10 @@
 :root {
   --font-heading: "Rubik", sans-serif; /* <weight> value from 300 to 900 */
   --font-body: "Roboto Mono", monospace; /* <weight> value from 100 to 700 */
-  --text-color-light: white;
-  --text-color-dark: black;
-  --background-color-dark: black;
-  --background-color-light: white;
-  --feature-color-light: lightblue;
-  --feature-color-dark: blue;
+  --main-color-light: #d9b650;
+  --main-color-dark: black;
+  --feature-color-light: #ec729c;
+  --feature-color-dark: #c54c82;
   --box-shadow-light: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   --box-shadow-heavy: rgba(0, 0, 0, 0.19) 0px 10px 20px,
     rgba(0, 0, 0, 0.23) 0px 6px 6px;
@@ -25,6 +23,7 @@ p {
 }
 section {
   padding: 20px;
+  text-align: center;
 }
 .english {
   display: none;
@@ -35,7 +34,7 @@ a {
 }
 /* Navbar Styles */
 .navbar {
-  background-color: var(--feature-color-dark);
+  background-color: var(--main-color-dark);
   font-family: var(--font-body);
 }
 .navbar-nav {
@@ -48,63 +47,76 @@ a {
   font-size: 30px;
 }
 .navbar-brand:hover {
-  color: var(--text-color-dark);
+  color: var(--main-color-dark);
 }
 .navbar a {
-  color: var(--text-color-light);
+  color: var(--main-color-light);
   font-size: 20px;
   margin: 0 20px;
   text-decoration: none;
 }
 .navbar a:hover {
-  color: var(--text-color-dark);
+  color: var(--feature-color-dark);
+}
+.navbar-toggler-icon {
+  background-color: var(--main-color-light);
 }
 
 /* Header Styles */
-header {
-  background-image: url("");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-h1,
-h2 {
-  color: var(--text-color-dark);
-  text-align: center;
-}
+
 h1 {
+  color: var(--main-color-light);
+  text-align: center;
   margin: 0;
   font-size: 60px;
   font-family: var(--font-heading);
   padding-top: 100px;
 }
 h2 {
+  color: var(--main-color-dark);
   font-size: 30px;
   font-family: var(--font-body);
   margin: 0 10px;
   padding: 30px 0;
+  text-align: center;
+}
+.logo {
+  background-color: var(--main-color-dark);
+  padding: 0 20px 80px 20px;
+}
+.hero {
+  background-image: url("./images/gym-leonardho.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 500px;
+  padding: 20px;
 }
 .lang-btn-container {
   display: flex;
   justify-content: center;
-  padding-bottom: 30px;
+}
+.gold {
+  color: var(--main-color-light);
 }
 
 /* Button Styles */
 .btn-standard {
+  background-color: var(--feature-color-dark);
+  border: 2px solid var(--feature-color-dark);
   border-radius: 10px;
   font-family: var(--font-body);
   margin: 50px;
   padding: 5px 10px;
 }
 .btn-standard:hover {
-  background-color: var(--background-color-light);
-  color: var(--text-color-light);
+  background-color: var(--feature-color-light);
+  color: var(--main-color-dark);
 }
 .btn-color {
   background-color: var(--feature-color-dark);
   border: 2px solid var(--feature-color-dark);
-  color: var(--text-color-light);
+  color: var(--main-color-dark);
   padding: 10px 20px;
   width: 180px;
   margin: 30px auto;
@@ -117,7 +129,16 @@ button.english {
   display: none;
 }
 
-/* Section 1 Styles */
+/* About Styles */
+.about-image {
+  border-radius: 20px;
+  box-shadow: var(--box-shadow-heavy);
+  max-width: 600px;
+}
+.about-container {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
 /* Section 2 Styles */
 /* Section 3 Styles */
 /* Section 4 Styles */
