--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 /* CSS Variables */
 :root {
-  --font-heading: "Rubik", sans-serif; /* <weight> value from 300 to 900 */
-  --font-body: "Roboto Mono", monospace; /* <weight> value from 100 to 700 */
+  --font-heading: "Bonheur Royale", serif;
+  --font-body: "Poppins", serif;
   --main-color-light: #d9b650;
-  --main-color-dark: black;
+  --main-color-dark: #231f20;
   --feature-color-light: #ec729c;
   --feature-color-dark: #c54c82;
   --box-shadow-light: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -36,6 +36,9 @@ a {
 .underline {
   text-decoration: underline;
 }
+.logo-small {
+  max-width: 200px;
+}
 /* Navbar Styles */
 .navbar {
   background-color: var(--main-color-dark);
@@ -62,8 +65,8 @@ a {
 .navbar a:hover {
   color: var(--feature-color-dark);
 }
-.navbar-toggler-icon {
-  background-color: var(--main-color-light);
+.hamburger {
+  color: var(--main-color-light);
 }
 
 /* Header Styles */
@@ -84,9 +87,13 @@ h2 {
   padding: 30px 0;
   text-align: center;
 }
+
 .logo {
   background-color: var(--main-color-dark);
-  padding: 0 20px 80px 20px;
+}
+
+.logo img {
+  padding-top: 100px;
   width: 100%;
 }
 .hero {
@@ -94,6 +101,7 @@ h2 {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  min-height: 600px;
   padding: 20px;
 }
 .lang-btn-container {
@@ -193,12 +201,39 @@ button.english {
   margin-bottom: 70px;
 }
 
+/* Gallery Styles */
+.horizontal-gallery {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row-gap: 20px;
+  margin: 20px 0;
+}
+.horizontal-gallery img,
+iframe {
+  border-radius: 20px;
+  box-shadow: var(--box-shadow-light);
+  margin: 0 auto;
+  object-fit: cover;
+}
+.vertical-gallery {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-row-gap: 20px;
+}
+.vertical-gallery img {
+  border-radius: 20px;
+  box-shadow: var(--box-shadow-light);
+  margin: 0 auto;
+  object-fit: cover;
+}
+
 /* Contact Styles */
 .contact-socials {
   margin: 50px 0;
 }
 
 /* Footer Styles */
+
 footer {
   background-color: var(--main-color-dark);
   display: flex;
@@ -211,6 +246,12 @@ footer {
 
 footer a {
   color: var(--main-color-light);
+}
+
+.varstar-pub {
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
 }
 
 /* Media Queries */
