--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@
   --font-body: "Poppins", serif;
   --main-color-light: #d9b650;
   --main-color-dark: #231f20;
-  --feature-color-light: #ec729c;
-  --feature-color-dark: #c54c82;
+  --feature-color-light: #c3195d;
+  --feature-color-dark: #f70776;
   --box-shadow-light: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   --box-shadow-heavy: rgba(0, 0, 0, 0.19) 0px 10px 20px,
     rgba(0, 0, 0, 0.23) 0px 6px 6px;
@@ -36,9 +36,10 @@ a {
 .underline {
   text-decoration: underline;
 }
-.logo-small {
-  max-width: 200px;
+.card {
+  width: 90%;
 }
+
 /* Navbar Styles */
 .navbar {
   background-color: var(--main-color-dark);
@@ -65,20 +66,13 @@ a {
 .navbar a:hover {
   color: var(--feature-color-dark);
 }
-.hamburger {
+.fa-bars {
   color: var(--main-color-light);
+  font-size: 30px;
 }
 
 /* Header Styles */
 
-h1 {
-  color: var(--main-color-light);
-  text-align: center;
-  margin: 0;
-  font-size: 60px;
-  font-family: var(--font-heading);
-  padding-top: 100px;
-}
 h2 {
   color: var(--main-color-dark);
   font-size: 30px;
@@ -127,15 +121,18 @@ h2 {
 }
 .undraw-container {
   background-image: url("./images/60-lines.png");
+  margin: 0;
   padding: 40px 0;
+  width: 100%;
 }
 .undraw {
   display: block;
-  width: 200px;
+  height: 250px;
+  max-width: 200px;
   margin: 40px auto 0 auto;
 }
 .h3-undraw {
-  padding: 20px 0 10px 0;
+  padding: 20px 5px 10px 5px;
   text-align: center;
 }
 
@@ -173,6 +170,12 @@ button.english {
   font-size: 60px;
   margin: 20px 10px 10px 10px;
 }
+.fa-square-facebook {
+  color: #0765ff;
+}
+.fa-square-instagram {
+  color: #e25376;
+}
 .about-image {
   border-radius: 20px;
   box-shadow: var(--box-shadow-heavy);
@@ -192,6 +195,14 @@ button.english {
 
 /* Services Styles */
 
+.services {
+  padding: 0;
+}
+.explanation-para {
+  margin: 40px auto;
+  padding: 0 20px;
+}
+
 /* Testimonials Styles */
 .blockquote-footer {
   border-radius: 20px;
@@ -199,6 +210,9 @@ button.english {
 }
 .testimonial {
   margin-bottom: 70px;
+}
+.blockquote-footer::before {
+  content: "";
 }
 
 /* Gallery Styles */
@@ -259,12 +273,32 @@ footer a {
 
 /* Media Queries */
 @media (min-width: 768px) {
-  h1 {
-    font-size: 100px;
-    padding-top: 180px;
+  p {
+    font-size: 25px;
   }
   h2 {
-    font-size: 45px;
+    font-size: 40px;
+  }
+  .btn-standard {
+    font-size: 25px;
+  }
+  .undraw-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .horizontal-gallery {
+    grid-template-columns: 1fr 1fr;
+  }
+  .vertical-gallery {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
+@media (min-width: 992px) {
+  .navbar a {
+    font-size: 25px;
+  }
+  h2 {
+    font-size: 50px;
   }
   p {
     font-size: 25px;
@@ -305,5 +339,18 @@ footer a {
   }
   .about-contact-btn {
     margin: 80px 0 40px 0;
+  }
+  .testimonials-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .horizontal-gallery iframe,
+  .horizontal-gallery img {
+    height: 314px;
+    width: 560px;
+  }
+  .vertical-gallery img {
+    width: 314px;
+    height: 560px;
   }
 }
