--- a/styles.css
+++ b/styles.css
@@ -149,9 +149,10 @@ h2 {
   background-color: var(--feature-color-dark);
   border: 2px solid var(--feature-color-dark);
   border-radius: 10px;
+  color: white;
   font-family: var(--font-body);
   margin: 50px;
-  padding: 5px 10px;
+  padding: 15px 20px;
 }
 .btn-standard:hover {
   background-color: var(--feature-color-light);
