--- a/styles.css
+++ b/styles.css
@@ -579,17 +579,15 @@ button.english {
   width: 50%;
   max-width: 300px;
   margin: 20px auto;
-  padding-bottom: 28.125%; /* Half of 16:9 aspect ratio */
-  height: 0;
+  height: 225px;
   overflow: hidden;
 }
 
 .map-container .responsive-iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
+  border: 0;
+  display: block;
 }
 
 /* Contact Styles */
